Issue #2893381 by maikelkoopman: fix alignment of image and potential contrast issues

--- a/themes/socialbase/assets/css/stream.css
+++ b/themes/socialbase/assets/css/stream.css
@@ -110,7 +110,7 @@
 .post-image {
   display: inline-block;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  margin-top: -0.25rem;
+  margin-top: -0.5rem;
 }
 
 @media (min-width: 600px) {
